Improved input pattern

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <p>Convert integer numbers into roman numerals (XHR).</p>
         <form>
           <label for="integer">Integer:</label>
-          <input type="text" name="integer" id="integer" pattern="([0-9]|[1-9][0-9]|100)" required />
+          <input type="text" name="integer" id="integer" pattern="^([0-9]|[1-9][0-9]|100)$" required />
           <button type="submit">Convert</button>
         </form>
       </div>
