--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Jolimoi - Step 1</title>
+    <title>Jolimoi - Step 2</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div class="wrapper">
       <div class="content" role="main">
         <h1>&nbsp;</h1>
-        <p>Convert integer numbers into roman numerals (XHR).</p>
+        <p>Convert integer numbers into roman numerals (SSE)</p>
         <form>
           <label for="integer">Integer:</label>
           <input type="text" name="integer" id="integer" pattern="^([0-9]|[1-9][0-9]|100)$" required />
@@ -38,6 +38,17 @@
           e.target.setCustomValidity("");
         });
 
+        const events = new EventSource("/stream");
+        let clientId;
+
+        events.addEventListener("connect", (e) => {
+          clientId = e.data;
+        });
+
+        events.addEventListener("message", (e) => {
+          result.innerHTML = e.data ? e.data : "&nbsp;";
+        });
+
         form.addEventListener("submit", (e) => {
           e.preventDefault();
 
@@ -50,12 +61,9 @@
               "Content-Type": "application/json",
             },
             body: JSON.stringify({
+              clientId,
               integer: input.value,
             }),
-          })
-          .then((response) => response.json())
-          .then((data) => {
-            result.innerHTML = data.roman ? data.roman : "&nbsp;";
           });
         });
       })();
